# Tickernel

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO  TODO.md  a.md  codesign.sh  deferredRenderPipeline2.c  example_image_usage.lua  out.c  temp.c  temp.cpp  temp.cpp.cpp  temp.diff  temp.txt  test.json  testLuaStringNulls.lua  vulkan_tutorials.cpp
assets/lua/: block.lua  deferredRenderPass.lua  engine.lua  floor.lua  format.lua  game.lua  gameMath.lua  gameState.lua  geometryPipeline.lua  gfx.lua  graphic.lua  image.lua  input.lua  item.lua  lightingPipeline.lua  main.lua  physics.lua  postprocessPipeline.lua  profiler.lua  srp.lua  text.lua  tknEngine.lua  tknRenderPipeline.lua  ui.lua  uiPipeline.lua  uiRenderPass.lua  vulkan.lua
assets/lua/api/: gfx.lua
assets/models/: Head.ovx_0.tknvox  LargeBuilding01.ply  LargeBuilding01_0.tknvox  SmallBuilding01.ply  SmallBuilding01_0.tknvox  SmallBuilding02.ply  SmallBuilding02_0.tknvox  SmallBuilding03.ply  SmallBuilding03_0.tknvox  SmallBuilding03_0.tvoxel  SmallBuilding04-0-SmallBuilding04.ply  SmallBuilding04-1-SmallBuilding_Floor.ply  SmallBuilding04_0.tknvox  SmallBuilding04_1.tknvox  Stone_0.tknvox  TallBuilding01.ply  TallBuilding01_0.tknvox  TallBuilding01_0.tvoxel  TallBuilding02.ply  TallBuilding02_0.tknvox  TallBuilding02_0.tvoxel  TallBuilding03.ply  TallBuilding03_0.tknvox  link_0.tknvox  treeAndRabbit_0.tvoxel
assets/shaders/: geometry.frag.spv  geometry.vert.spv  global.frag.spv  global.vert.spv  lighting.frag.spv  lighting.subpass.frag.spv  lighting.vert.spv  lightingSubpass.frag.spv  liquidGeometry.vert.spv  opaqueGeometry.vert.spv  opaqueLighting.frag.spv  opaqueLighting.vert.spv  postProcess.frag.spv  ui.frag.spv  ui.vert.spv  waterGeometry.vert.spv
assets/textures/: default.astc
editor/glsl/: geometry.frag  geometry.vert  lighting.frag  lighting.vert
engine/: CMakeLists.txt
engine/assets/shaders/: lighting.subpass.frag.spv  opaqueLighting.frag.spv  postProcess.frag.spv  postProcess.subpass.frag.spv  waterGeometry.vert.spv
engine/res/glsl/: global.glsl  lighting.subpass.frag  opaqueGeometry.vert  postProcess.subpass.frag.glsl  waterGeometry.frag  waterGeometry.vert
engine/src/: gfxPipeline.c  gfxRes.h  tknCore.c
gfx/include/spirv_reflect/: spirv_reflect.h
gfx/src/: gfx.h  gfxCommon.h  tknCore.h
glsl/: commands.txt  geometry.frag  geometry.frag.spv  geometry.vert  geometry.vert.spv  lighting.frag  lighting.vert
include/lua/: tickernelLuaBinding.c  tickernelLuaBinding.h
lib/lua/: liblua.dylib
lua/: CMakeLists.txt
lua/include/: luaconf.h  tknLua.h
lua/lib/lua/: liblua.dylib
lua/src/: tknFont.c  tknFont.h  tknLua.c  tknLua.h  tknLuaBinding.c  tknLuaBinding.h  tknText.c
lua/tests/: a.c
luaBinding/: luaBinding.h
osx/osx/: AppDelegate.h  AppDelegate.m  AppDelegate.swift  AppView.h  AppView.m  AudioBinding.h  AudioBinding.m  EngineBinding.h  EngineBinding.m  LuaBinding.h  LuaBinding.m  ViewController.h  ViewController.m  bridge.h  bridgingHeader.h  luaBinding.h  luaBinding.m  main.c  main.m  temp.txt
osx/osx.xcodeproj/: project.pbxproj
osx/osx.xcodeproj/project.xcworkspace/xcuserdata/forgemastergua.xcuserdatad/: UserInterfaceState.xcuserstate
osx/osx.xcodeproj/xcshareddata/xcschemes/: osx.xcscheme
osx/osx.xcodeproj/xcuserdata/hema.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
osx/osx/Base.lproj/: Main.storyboard
projects/osx/osx/: AppView.m  AudioBinding.h  AudioBinding.m  EngineBinding.h  EngineBinding.m
ref/: deferredRenderPass.c  deferredRenderPass.h  graphics.c.ref  graphics.c.txt  graphics.h.ref  graphics.h.txt  postProcessSubpass.h  tutorials.cpp  uiRenderPass.c  uiRenderPass.h
res/glsl/: global.frag  global.glsl  global.vert  lighting.subpass.frag.glsl  lightingSubpass.frag  lightingSubpass.frag.glsl  opaqueGeometry.frag  opaqueGeometry.vert  opaqueLighting.frag  opaqueLighting.vert  postProcess.frag  postProcess.subpass.frag  postProcessSubpass.frag  tickernel.glsl  ui.frag  ui.frag.glsl  ui.vert  ui.vert.glsl  waterGeometry.frag  waterGeometry.vert
res/textures/: astcenc
res/vox/: Head.ovx.vox  Head.vox  LargeBuilding01_0.tknvox  SmallBuilding01_0.tknvox  SmallBuilding02_0.tknvox  SmallBuilding04_0.tknvox  SmallBuilding04_1.tknvox  Stone.vox  TallBuilding01_0.tknvox  link.vox  link_0.tknvox  vox.txt  voxParser.py
resources/glsl/: commands.txt  geometry.vert  lighting.vert  opaqueGeometry.vert  opaqueLighting.frag  postProcess.frag  postProcess.vert
resources/vox/: SmallBuilding04_1.tvoxel  treeAndRabbit.vox  voxParser.py
src/: deferredRenderPass.c  deferredRenderPass.h  deferredRenderPipeline.c  deferredRenderPipeline.h  geometrySubpass.c  geometrySubpass.h  gfx.c  gfx.h  gfxCommon.c  gfxCommon.h  gfxDevice.c  gfxDevice.h  gfxEngine.c  gfxEngine.h  gfxPipeline.c  gfxPipeline.h  gfxRes.c  gfxRes.h  gfxResources.c  gfxResources.h  graphic.c  graphic.h  graphicCore.c  graphicCore.h  graphicEngine.c  graphicEngine.h  graphicEngineCore.c  graphicEngineCore.h  graphics.c  graphics.h  graphicsCore.c  graphicsCore.h  lightingSubpass.c  lightingSubpass.h  liquidGeometrySubpass.c  liquidGeometrySubpass.h  lua.c  lua.h  luaBinding.c  luaBinding.h  (+51 more)
src/renderPasses/: deferredRenderPass.c  deferredRenderPass.h  postProcessRenderPass.c  postProcessRenderPass.h
src/renderPasses/subpasses/: opaqueGeometrySubpass.c  opaqueLightingSubpass.c  postProcessSubpass.c
tests/: luaTest.c  spirvReflectTest.c  tempTest.c  tknDynamicArrayTests.c  tknHashSetTests.c
tickernel/: CMakeLists.txt
tickernel-editor/: package-lock.json  package.json
tickernel/src/: gfx.h  gfxPipeline.h  gfxRes.c  tknCore.c  tknCore.h
tkn/: CMakeLists.txt
tkn/include/: astc.h  tkn.h
tkn/src/: astc.c  attachment.c  drawCall.c  framebuffer.c  gfx.c  gfx.h  gfxCommon.c  gfxCommon.h  gfxContext.c  gfxCore.c  gfxCore.h  gfxPipeline.c  gfxPipeline.h  gfxRes.c  gfxRes.h  gfxResource.c  gfxResource.h  image.c  instance.c  material.c  mesh.c  pipeline.c  renderPass.c  sampler.c  tknCore.c  tknCore.h  uniformBuffer.c
tkn/tests/: test_hashset.c  test_save_mesh_ply.c
(+6 files in other folders)
